<resources>
    <string name="app_name">JellyCrew</string>

    // Default Button
    <string name="btn_ok">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_next">다음</string>

    // Popup
    <string name="popup_permission_setting_title">필요 권한</string>
    <string name="popup_permission_setting_message">이 앱은 사용하기 위해 권한이 필요합니다. 앱 설정에서 부여할 수 있습니다.</string>

    // Toast
    <string name="toast_app_finish">뒤로 가기를 한 번 더 누를 시 앱이 종료됩니다.</string>
    <string name="toast_payment_request_token">이 로직은 서버사이드에서 먼저 수행되어야 합니다.</string>
    <string name="toast_request_join_fail">지금은 회원 가입이 안되요. 잠시 뒤 다시 시도해 주세요 :(</string>

    // Login
    <string name="login">로그인</string>
    <string name="login_title">JELLY CREW</string>
    <string name="login_sub_title">크리에이터와 나를 잇는 쇼핑플랫폼</string>
    <string name="login_email">이메일 로그인</string>
    <string name="login_email_join">이메일로 가입</string>
    <string name="login_old_order_list_view">2022년 09월 이전 주문조회</string>
    <string name="login_social_error_01">연결이 실패했습니다.</string>
    <string name="login_social_error_02">API URL이 잘못되었습니다.</string>
    <string name="login_social_error_03">API 응답을 읽는데 실패했습니다.</string>
    <string name="login_social_error_04">API 요청과 응답을 실패했습니다.</string>

    // Login Email
    <string name="login_email_title">이메일과 비밀번호를\n입력해주세요 :)</string>
    <string name="login_email_btn_find">이메일 찾기</string>
    <string name="login_email_btn_reset_password">비밀번호 재설정</string>

    // Login not found
    <string name="login_not_found_title">젤리크루에는\n입력하신 이메일로\n가입된 계정이 없네요.</string>
    <string name="login_not_found_noti">혹시 이메일 주소 또는 비밀번호 입력\n오류일 수 있으니 확인 부탁드려요.\n\n그래도 동일한 안내가 계속 나온다면\n이메일 찾기 또는 회원가입을 진행해 주세요 :)</string>

    // Join Terms
    <string name="join_title">회원가입</string>
    <string name="join_terms_sub_title">젤리크루\n약관에 동의해 주세요 :)</string>
    <string name="join_terms_agree_all">모두 동의 (선택정보 포함)</string>
    <string name="join_terms_agree_item_01">[필수] 만 14세 이상입니다.</string>
    <string name="join_terms_agree_item_02">[필수] 이용약관 동의</string>
    <string name="join_terms_agree_item_03">[필수] 개인정보수집 및 이용 동의</string>
    <string name="join_terms_agree_item_04">[선택] 특가, 쿠폰 등 이벤트 알림 이메일, 문자, 앱푸시</string>
    <string name="join_terms_agree_item_05">[선택] 개인정보 유효기간</string>
    <string name="join_terms_agree_item_06">평생회원(탈퇴 시)으로 가입</string>
    <string name="join_terms_agree_item_07">※ 평생회원은 가입 적립금 + 1,000원을 더 드려요 :)</string>
    <string name="join_terms_agree_user_info_noti">개인정보 유효기간은 1년이 기본이고, 1년 간 접속 기록이 없는 경우 휴면회원(장기 미이용 고객)으로 전환되며, 평생회원으로 가입 시에는 휴면전환 또는 휴면 후 해제없이 탈퇴 시까지 유지되요.</string>
    <string name="join_terms_agree_view_detail">보기</string>
    <string name="join_terms_agree_confirm">동의하고 가입하기</string>
    <string name="join_terms_test_contents_s">이용약관</string>
    <string name="join_terms_test_contents_l">개인정보수집 및 이용동의</string>

    // Join Phone
    <string name="join_phone_sub_title">이름과\n휴대폰 번호를 알려주세요 :)</string>
    <string name="join_phone_sub_title_hint">입력하신 번호로 인증번호를 보내드려요.</string>
    <string name="join_phone_input_hint">휴대폰 번호 (- 제외)</string>
    <string name="join_phone_request_verify">인증 요청</string>
    <string name="join_phone_request_verify_retry">재전송</string>
    <string name="join_phone_verify_number_send">인증 문자를 보내드렸어요. 확인해 주세요.</string>
    <string name="join_phone_error_01">휴대폰 번호를 입력하세요.</string>
    <string name="join_phone_error_02">휴대폰 번호가 올바르지 않아요.</string>
    <string name="join_phone_error_03">인증번호를 입력하세요.</string>
    <string name="join_phone_error_04">인증번호가 맞지 않아요.</string>
    <string name="join_phone_error_05">인증번호 입력 시간이 지났어요.</string>
    <string name="join_phone_error_toast">인증 문자를 보내드릴 수 없는 번호로 확인되요.</string>
    <string name="join_phone_error_request_verify_fail">인증문자가 계속 오지 않아요 :(</string>
    <string name="join_phone_error_request_verify_fail_title">인증문자가\n계속 오지 않나요? :(</string>
    <string name="join_phone_error_request_verify_fail_notice_01">1. 젤리크루 고객센터 번호(070-4402-1515)가\n스팸 문자로 분류되어 있을 수 있어요.</string>
    <string name="join_phone_error_request_verify_fail_notice_02">2. 가입한 통신사 무료 부가서비스 중에\n스팸 필터링 부가서비스가 있을 수 있어요.</string>
    <string name="join_phone_error_request_verify_fail_notice_03">위 2가지 사유인 경우가 많으니 먼저 휴대폰의 스팸 문자함 및 통신사에 해당 부가서비스 가입 여부를 확인해 주세요.</string>
    <string name="join_phone_error_request_verify_fail_notice_04">그럼에도 불구하고 계속 오지 않는다면,\n젤리크루 카톡상담 또는 메일로 문의해 주세요.</string>

    // Join already member
    <string name="join_already_member_title">새 단장한 젤리크루 앱으로\n회원님의 기본정보를 가져올게요 :)</string>
    <string name="join_already_member_hint">단장 전의 젤리크루에 가입 또는 주문 시에 저장하셨던\n번호로 확인돼요.\n본인 인증 당시의 이름을 입력해주세요.</string>
    <string name="join_already_member_user_info">인증된 회원정보</string>
    <string name="join_already_member_new_join">새단장 했으니 신규가입 할래요</string>

    // Join already member not found
    <string name="join_already_member_not_found_title_01">휴대폰 번호와 이름이\n일치하지 않아</string>
    <string name="join_already_member_not_found_title_02">정보를 가져올 수 없어요.</string>
    <string name="join_already_member_not_found_hint">회원님의 개인정보를 보호하기 위해\n정확하게 맞아야만 정보를 가져올 수 있어요\n다시 인증 또는 신규가입으로 진행해주세요 :)</string>
    <string name="join_already_member_not_found_retry">다시 인증</string>
    <string name="join_already_member_not_found_cs_kakao">카톡상담</string>
    <string name="join_already_member_not_found_cs_email">메일보내기</string>

    // Join Already
    <string name="join_already_title_01">오랜만이에요! :)</string>
    <string name="join_already_title_02">해당 번호로 이미\n젤리크루에 가입되어 있어요! :)</string>
    <string name="join_already_title_03">아래 힌트를 보시고, 로그인 해 주세요.</string>
    <string name="join_already_email">이메일</string>
    <string name="join_already_sns">소셜 계정 연동</string>
    <string name="join_already_login">로그인</string>
    <string name="join_already_new_join">다른 이메일 주소로 가입할래요.</string>

    // Join Email
    <string name="join_email_sub_title">아이디가 될\n이메일 주소를 입력해 주세요 :)</string>
    <string name="join_email_input_hint">이메일 주소 입력</string>
    <string name="join_email_input_empty">이메일 주소를 입력해 주세요 :)</string>
    <string name="join_email_input_error">이메일 주소가 올바르지 않아요. (메일아이디@메일도메인)</string>
    <string name="join_email_already_use">사용할 수 없는 이메일이에요. 다른 주소를 입력해 주세요.</string>

    // Join Password
    <string name="join_password_sub_title">비밀번호를 만들어주세요 :)</string>
    <string name="join_password_sub_title_hint">이메일로 가입한 경우에 사용돼요.</string>
    <string name="join_password_input_hint">비밀번호 입력</string>
    <string name="join_password_rule_01">영문 포함</string>
    <string name="join_password_rule_02">숫자 또는 특수문자 포함</string>
    <string name="join_password_rule_03">6자 이상</string>
    <string name="join_password_same_check">비밀번호 일치</string>
    <string name="join_password_same_check_error">비밀번호가 일치하지 않아요.</string>

    // Join UserInfo
    <string name="join_user_info_sub_title">마지막으로\n가입/생일 쿠폰 등의 혜택을 위해\n인적사항을 알려주세요!</string>
    <string name="join_user_info_name_hint">이름 입력</string>
    <string name="join_user_info_name_rule_01">한글 또는 영문</string>
    <string name="join_user_info_name_rule_02">2자 이상</string>
    <string name="join_user_info_birth_hint">생년월일 입력</string>
    <string name="join_user_info_birth_error_msg">만 14세 이상만 가입하실 수 있어요.</string>
    <string name="join_user_info_gender_hint">성별 입력</string>
    <string name="join_user_info_gender_noti">성별을 선택해 주세요.</string>
    <string name="join_user_info_gender_female">여성</string>
    <string name="join_user_info_gender_male">남성</string>
    <string name="join_user_info_gender_etc">제3의 성</string>
    <string name="join_confirm">가입완료</string>

    // Join Success
    <string name="join_success_sub_title_01">가입완료 :)</string>
    <string name="join_success_sub_title_02">님과 젤리크루, 오늘부터 1일</string>
    <string name="join_success_sub_title_03">함께하게 되어 기쁜 마음에\n웰컴 기프트를 보내드려요!</string>
    <string name="join_success_benefits_01">웰컴 젤리캐쉬</string>
    <string name="join_success_benefits_02">웰컴 크루 전용</string>
    <string name="join_success_benefits_03">평생회원 전환</string>
    <string name="join_success_benefits_01_value">3,000 원</string>
    <string name="join_success_benefits_02_value">50% 특가전</string>
    <string name="join_success_benefits_03_value">1,000 원</string>
    <string name="join_success_benefits_noti">※ 웰컴 기프트는 오늘부터 1달 안에 사용해주세요!</string>
    <string name="join_success_confirm">Go, 젤리크루!</string>

    // Join Cafe24 Success
    <string name="join_success_cafe24_title_01">님과 젤리크루, 다시 이어졌어요</string>
    <string name="join_success_cafe24_title_02">다시 함께하게 되어 기쁜 마음에\n새단장 캐쉬도 보내드려요!</string>
    <string name="join_success_cafe24_benefits_01">잔여 적립금</string>
    <string name="join_success_cafe24_benefits_02">새단장 캐쉬</string>
    <string name="join_success_cafe24_benefits_02_value">1,000 원</string>
    <string name="join_success_cafe24_benefits_noti">※ 새단장 캐쉬는 오늘부터 1달 안에 사용해주세요!</string>

    // Join Finish
    <string name="join_finish_title_01">회원가입을 중단하시겠어요?</string>
    <string name="join_finish_title_02">계속 가입 진행하시고,\n웰컴 기프트 꼭! 받으세요 :)</string>
    <string name="join_finish_btn_01">계속 가입하기</string>
    <string name="join_finish_btn_02">중단하기</string>

</resources>