<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable name="viewModel" type="handshug.jellycrew.member.viewModel.MemberViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:setCheckBoxAll="@{true}">

        <include
            android:id="@+id/ic_common_title_join"
            layout="@layout/common_title_join"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:viewModel="@{viewModel}"
            app:index="@{0}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_terms_sub_title"
            style="@style/style_common_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="62dp"
            android:text="@string/join_terms_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_common_title_join" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_all"
            style="@style/style_common_checkbox"
            android:layout_marginStart="16dp"
            android:text="@string/join_terms_agree_all"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="-10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_terms_sub_title" />

        <View
            android:id="@+id/v_blank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="-16dp"
            android:background="@drawable/common_box_radius08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cb_join_terms_agree_item_01"
            app:layout_constraintBottom_toBottomOf="@+id/cb_join_terms_agree_item_07"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_01"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_01"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_all" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_02"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_02"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_01" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_terms_agree_item_02_detail"
            style="@style/style_common_text"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/join_terms_agree_view_detail"
            android:textColor="@drawable/selector_color_gray500_n_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/cb_join_terms_agree_item_02"
            app:layout_constraintEnd_toEndOf="@+id/v_blank"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_01" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_03"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_03"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_02" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_terms_agree_item_03_detail"
            style="@style/style_common_text"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/join_terms_agree_view_detail"
            android:textColor="@drawable/selector_color_gray500_n_white"
            android:layout_marginStart="16sp"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_02"
            app:layout_constraintEnd_toEndOf="@+id/v_blank"
            app:layout_constraintBaseline_toBaselineOf="@+id/cb_join_terms_agree_item_03" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_04"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_04"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_03" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_05"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_05"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_04" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="@{() -> viewModel.showDialogUserInfoNoti()}"
            app:srcCompat="@drawable/ic_icon_help_info"
            app:layout_constraintStart_toEndOf="@+id/cb_join_terms_agree_item_05"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_04" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_join_terms_agree_item_06"
            style="@style/style_common_checkbox_no_stroke"
            android:text="@string/join_terms_agree_item_06"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-16dp"
            android:textColor="@drawable/selector_color_lite_gray_n_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_05" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cb_join_terms_agree_item_07"
            style="@style/style_common_text"
            android:text="@string/join_terms_agree_item_07"
            android:textColor="@color/color_common_violet500"
            android:layout_marginStart="70dp"
            android:padding="5dp"
            android:background="@drawable/common_box_radius08_violet100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_join_terms_agree_item_06" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_terms_agree_confirm"
            style="@style/style_common_button"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:onClick="@{() -> viewModel.navigateToJoinPhone()}"
            android:text="@string/join_terms_agree_confirm"
            android:textColor="@drawable/selector_color_gray500_n_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_blank" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>