<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="50dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/common_box_top_radius08_white" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_user_info_gender_noti"
            style="@style/style_common_text"
            android:textSize="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/join_user_info_gender_noti"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_user_info_gender_female"
            style="@style/style_common_button_bold"
            android:layout_width="0dp"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:padding="5dp"
            android:text="@string/join_user_info_gender_female"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_user_info_gender_noti" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_user_info_gender_male"
            style="@style/style_common_button_bold"
            android:layout_width="0dp"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:padding="5dp"
            android:text="@string/join_user_info_gender_male"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_join_user_info_gender_female" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_user_info_gender_etc"
            style="@style/style_common_button_bold"
            android:layout_width="0dp"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:padding="5dp"
            android:text="@string/join_user_info_gender_etc"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_join_user_info_gender_male" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>