<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable name="viewModel" type="handshug.jellycrew.member.viewModel.MemberViewModel" />
        <variable name="dialog" type="androidx.appcompat.app.AlertDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="50dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/common_box_radius16_white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_finish_title_01"
            style="@style/style_common_title"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:layout_marginStart="10dp"
            android:text="@string/join_finish_title_01"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join_finish_title_02"
            style="@style/style_common_sub_title"
            android:layout_marginStart="10dp"
            android:text="@string/join_finish_title_02"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_finish_title_01"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_join_finish_benefits_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/common_box_radius08_gray100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_finish_title_02">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_join_finish_benefits_01"
                style="@style/style_common_text_bold"
                android:drawableStart="@drawable/ic_icon_join_benefits_01"
                android:drawablePadding="10dp"
                android:text="@string/join_success_benefits_01"
                android:textColor="@color/color_common_text_gray900"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_center_01"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_join_finish_benefits_01"
                android:background="@color/color_common_border_gray500" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_common_text_bold"
                android:text="@string/join_success_benefits_01_value"
                android:textColor="@color/color_common_text_gray900"
                android:textSize="16sp"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@+id/v_center_01"
                app:setTextColorSpannableStart="@{0}"
                app:setTextColorSpannableEnd="@{5}"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_join_finish_benefits_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/common_box_radius08_gray100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_join_finish_benefits_01">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_join_finish_benefits_02"
                style="@style/style_common_text_bold"
                android:drawableStart="@drawable/ic_icon_join_benefits_02"
                android:drawablePadding="10dp"
                android:text="@string/join_success_benefits_02"
                android:textColor="@color/color_common_text_gray900"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_center_02"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_join_finish_benefits_02"
                android:background="@color/color_common_border_gray500" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_common_text_bold"
                android:text="@string/join_success_benefits_02_value"
                android:textColor="@color/color_common_text_gray900"
                android:textSize="16sp"
                android:layout_toEndOf="@+id/v_center_02"
                app:setTextColorSpannableStart="@{0}"
                app:setTextColorSpannableEnd="@{3}"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_finish_btn_01"
            style="@style/style_common_button_bold"
            android:layout_width="0dp"
            android:background="@drawable/selector_btn_radius08_violet500_n_gray200"
            android:padding="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/join_finish_btn_01"
            android:textColor="@drawable/selector_color_white_n_gray500"
            android:onClick="@{() -> dialog.dismiss()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_join_finish_benefits_02" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_finish_btn_02"
            style="@style/style_common_button_bold"
            android:layout_width="0dp"
            android:background="@drawable/selector_btn_radius08_gray200_n_violet500"
            android:padding="5dp"
            android:text="@string/join_finish_btn_02"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.activityClose()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_join_finish_btn_01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>